[package]
name = "swe-analysis"
version = "0.1.0"
authors = ["Wei Lee <leewei48750@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine = "0.5.4"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
